--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="banner.css">
+    <link rel="stylesheet" href="features.css">
+    <link rel="stylesheet" href="upperLines.css">
+    <link rel="stylesheet" href="muestras.css">
+    <link rel="stylesheet" href="footer.css">
+
 
 </head>
 <body>
@@ -31,10 +37,12 @@
                 <li>BLOG</li>
                 <li>CONTACT US</li>
             </ul>
-            <figure class="searchBar">
-                <p>Search Something</p>
+            <figure class="search">
+                <input type="text" class="searchBar" placeholder="Search Something">
                 <i class="fa-solid fa-magnifying-glass"></i>
+            
             </figure>
+            
         </div>
     </section>
     <section class="banner">
